--- a/app/globals.css
+++ b/app/globals.css
@@ -18,3 +18,8 @@
 .MuiToolbar-root{
   @apply !bg-primary-color;  
 }
+
+
+.container{
+  @apply w-[98%] lg:w-[90%] mx-auto my-3 md:my-5 lg:my-8 py-8 ;  
+}
