--- a/app/globals.css
+++ b/app/globals.css
@@ -21,5 +21,5 @@
 
 
 .container{
-  @apply w-[98%] lg:w-[90%] mx-auto my-3 md:my-5 lg:my-8 py-8 ;  
+  @apply w-[98%] lg:w-[97%] xl:w-[95%] mx-auto my-3 md:my-5 lg:my-3 py-4 ;  
 }
